Fixed overflow issue on home page

--- a/templates/static/css/test.css
+++ b/templates/static/css/test.css
@@ -15,6 +15,7 @@ html {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 .bold {
